--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,8 +8,30 @@
   </head>
   <body>
     <div id="content">
-      <h1>David Morley</h1>
+      <div id="midTile" >
+      <p class="Title">David Morley</p>
       <p>This is my portfolio.</p>
+      <div class ="tile">
+        <div class="tileInner">
+        <div class = "tileFront">
+          <p class = "SubTitle"> Background </p> 
+        </div>
+        <div class = "tileBack">
+          <p class ="Subtitle"> WORDS</p>
+        </div>
+        </div>
+      </div>
+      <div class ="tile">
+        <div class="tileInner">
+          <div class="tileFront">
+            <p class = "SubTitle"> More info  </p> 
+          </div>
+          <div class ="tileBack">
+            <p class= "SubTitle"> Here is the info </p>
+          </div>
+        </div>
+      </div>
+    </div> 
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
