Add background information. Improve Tiling look/size of content body.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -15,9 +15,18 @@
         <div class="tileInner">
         <div class = "tileFront">
           <p class = "SubTitle"> Background </p> 
+
         </div>
         <div class = "tileBack">
-          <p class ="Subtitle"> WORDS</p>
+          I was born in Sacramento, CA and have spent most of my life living there. Ever since I was little I have been interested
+          in building and experimenting with different things, working on crafts with my mom and spending lots of time figuring out how I can fit projects together. 
+          In high school I joined an FRC team (robotics team) where I discovered my passion for programming and lead the team to many successful competitions. I am currently
+          a rising junior at UCLA where I am involved in the UAS team (drone club) and also pursue research in NLP through the Intel AI Student Ambassadors program
+
+          For fun I enjoy spending as much time as possible with my lovely dog, Bailee (I am a huge animal lover) as well as attending as many sporting events as I can. I love going
+          with a group of friends to all UCLA's basketball and football as we root them on even when our teams are not the best. When I'm pursuing these activities I like to spend time 
+          working on OS and hardware projects, building a server for my home and trying to buy old computers to use in new systems around my house. 
+
         </div>
         </div>
       </div>
