--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio</title>
+  <title>David Morley | Google Step Intern </title>
   <link rel="stylesheet" href="style.css">
   <!--Add icon library for linkedIn, faceBook, etc-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,11 +14,12 @@
   <div id="content">
     <div id="midTile">
       <p class="Title">David Morley</p>
-      <a target = "_blank" href="https://google.com"><i class="fa fa-dribbble"></i></a>
-      <a target = "_blank" href="#"><i class="fa fa-twitter"></i></a>
-      <a target = "_blank" href="#"><i class="fa fa-linkedin"></i></a>
-      <a target = "_blank" href="#"><i class="fa fa-facebook"></i></a>
-      <p>This is my portfolio.</p>
+      <img id ="Headshot" alt="David Morley Headshot" src="images/Headshot.jpg"></img>
+      <p>
+      <a target = "_blank" href="https://medium.com/@dmoe22"><i class="fa fa-dribbble"></i></a>
+      <a target = "_blank" href="https://linkedin.com/in/22dmoe"><i class="fa fa-linkedin"></i></a>
+      <a target = "_blank" href="https://m.facebook.com/david.morley.104855"><i class="fa fa-facebook"></i></a>
+      </p>
       <div class="tile">
         <div class="tileInner">
           <div class="tileFront">
