Add random image generator. Minor styling changes.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -56,7 +56,19 @@
           </div>
         </div>
       </div>
+    <!--Would really be ideal to implement this tiles in React as they are getting somewhat redundant to construct-->
+    <div class="tile">
+      <div class="tileInner">
+        <div id="rFrontTile" class="tileFront">
+          <p class="SubTitle"> Fun Photos </p>
+        </div>
+        <div id="rBackTile" class="tileBack">
+          <img src="images/random/test1.jpg">
+        </div>
+      </div>
     </div>
+  </div>
+</div>
     <p>Click here to get a random message:</p>
     <button onclick="addRandomGreeting()">Hello</button>
     <div id="greeting-container"></div>
