added necessary images

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,8 +27,7 @@
             <img class="mountain-tile-logo" src="images/mountain.png" alt="mountain">
           </div>
           <div class="tile-back">
-            <link rel="import" type="text/html" href="content/background.html" />
-
+            <iframe style="width:92%; height:100%" src="content/background.html" scrolling="no" frameborder="0"></iframe>
           </div>
         </div>
       </div>
