Changed alt text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,7 +54,7 @@
         <div class="tile-inner">
           <div id="rand-front-tile" class="tile-front">
             <p class="sub-title"> Fun Photos </p>
-            <img id="juggling-tile-logo" src="images/fun.png" alt="hammer">
+            <img id="juggling-tile-logo" src="images/fun.png" alt="fun">
           </div>
           <div id="rand-back-tile" class="tile-back">
             <img src="images/random/test1.jpg">
