Minor formatting changes

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>David Morley | Google Step Intern </title>
   <link rel="stylesheet" href="style.css">
-  <!--Add icon library for linkedIn, FaceBook, etc-->
+  <!--Add icon library for linkedIn, FaceBook, etc.-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="script.js"></script>
 </head>
@@ -20,7 +20,7 @@
             <img src="images/Headshot.jpg"></img>
           </div>
           <div class="portrait-tile-back">
-            <div style="overflow:auto; width:100%; height:100%">
+            <div>
               <p> <b>College:</b> UCLA</p>
               <p> <b>Degree:</b> Computer Science and Engineering</p>
               <p> <b>Favorite Food:</b> Lasagna</p>
