Fix inaccuracy in background

--- a/portfolio/src/main/webapp/content/background.html
+++ b/portfolio/src/main/webapp/content/background.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <p>
-    I was born in Sacramento, CA and have spent most of my life living there. Ever since I was little I have
+    I was born in California and have spent almost the entirety of my life living in Sacramento. Ever since I was little I have
     been interested
     in building and experimenting with different things, working on crafts with my mom and spending lots of time
     figuring out how I can fit projects together.
