Complete part 2, add request

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -79,6 +79,10 @@
           </div>
         </div>
       </div>
+      <div id="comment">
+        <p></p>
+        <button onclick="fetchAndModify('/data', document.getElementById('comment'))">Click me</button>
+      </div>
     </div>
   </div>
   </div>
