Address styling issues. Change tag format to omit spaces, seems to be convention followed on numerous google webpages.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>David Morley | Google Step Intern </title>
+  <title>David Morley | Google Step Intern</title>
   <link rel="stylesheet" href="style.css">
   <!--Add icon library for linkedIn, FaceBook, etc.-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,25 +21,23 @@
           </div>
           <div class="portrait-tile-back">
             <div>
-              <p> <b>College:</b> UCLA</p>
-              <p> <b>Degree:</b> Computer Science and Engineering</p>
-              <p> <b>Favorite Food:</b> Lasagna</p>
-              <p><b>Favorite T-shirt:</b> A teal t-shirt with a white penguin, it looks much cooler than it sounds.</p>
+              <p><b>College:</b>UCLA</p>
+              <p><b>Degree:</b>Computer Science and Engineering</p>
+              <p><b>Favorite Food:</b>Lasagna</p>
+              <p><b>Favorite T-shirt:</b>A teal t-shirt with a white penguin, it looks much cooler than it sounds.</p>
             </div>
           </div>
         </div>
       </div>
       <p id="icons">
-        <a target="_blank" href="https://medium.com/@dmoe22"><i class="fa
-        fa-dribbble"></i></a>
-        <a target="_blank" href="https://linkedin.com/in/22dmoe"><i class="fa
-        fa-linkedin"></i></a>
+        <a target="_blank" href="https://medium.com/@dmoe22"><i class="fa fa-dribbble"></i></a>
+        <a target="_blank" href="https://linkedin.com/in/22dmoe"><i class="fa fa-linkedin"></i></a>
         <a target="_blank" href="https://m.facebook.com/david.morley.104855"><i class="fa fa-facebook"></i></a>
       </p>
       <div class="tile">
         <div class="tile-inner">
           <div class="tile-front">
-            <p class="sub-title"> Background </p>
+            <p class="sub-title">Background</p>
             <img class="mountain-tile-logo" src="images/mountain.png" alt="mountain">
           </div>
           <div class="tile-back">
@@ -51,17 +49,17 @@
       <div class="tile">
         <div class="tile-inner">
           <div class="tile-front">
-            <p class="sub-title"> Personal Projects </p>
+            <p class="sub-title">Personal Projects</p>
             <img id="hammer-tile-logo" src="images/hammerremoved.png" alt="hammer">
           </div>
           <div class="tile-back">
-            <p class="sub-title"> Projects Include </p>
+            <p class="sub-title">Projects Include</p>
             <ul>
-              <li> Created Home Samba Server </li>
-              <li> Household PXE Network Boot </li>
-              <li> NLP Research through Intel AI</li>
+              <li>Created Home Samba Server</li>
+              <li>Household PXE Network Boot</li>
+              <li>NLP Research through Intel AI</li>
               <li>UAS Controls Obstacle Avoidance</li>
-              <li> Group Router Project</li>
+              <li>Group Router Project</li>
             </ul>
           </div>
         </div>
@@ -71,7 +69,7 @@
       <div class="tile">
         <div class="tile-inner">
           <div id="rand-front-tile" class="tile-front">
-            <p class="sub-title"> Fun Photos </p>
+            <p class="sub-title">Fun Photos</p>
             <img id="juggling-tile-logo" src="images/fun.png" alt="fun">
           </div>
           <div id="rand-back-tile" class="tile-back">
