Fix iframe spacing

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -41,8 +41,7 @@
             <img class="mountain-tile-logo" src="images/mountain.png" alt="mountain">
           </div>
           <div class="tile-back">
-            <iframe id="embed-text1" style="width:98%; height:100%" src="content/background.html" scrolling="yes"
-              frameborder="0"></iframe>
+            <iframe id="embed-text1" style="width:98%; height:100%" src="content/background.html" scrolling="yes" frameborder="0"></iframe>
           </div>
         </div>
       </div>
