Test BootStrap spinner. Add delete get request.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,6 +8,13 @@
   <!--Add icon library for linkedIn, FaceBook, etc.-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="bootstrap-input-spinner.js"></script>
+  <script>
+    $("input[type='number']").inputSpinner()
+  </script>
 </head>
 
 <body>
@@ -89,6 +96,7 @@
           </div>
         </form>
       </div>
+      <input type="number" value="20" min="0" max="300" step="10"/>
     </div>
   </div>
   </div>
