Add buttons for most comment features. All features except number of responses implemented. Still need to address styling/code improvements from prior pull requests.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <!--Add icon library for linkedIn, FaceBook, etc.-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="bootstrap/glyphicons-only-bootstrap/css/bootstrap.min.css">
   <script src="script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -85,18 +86,38 @@
         </div>
       </div>
       <div id="prior-comments" onload="loadComments()">
+        <div class="input-panel">
+          <input id="select-num-results" type="number" value="20" min="0" max="300" step="10" />
+          <button type="submit" class="btn" form="data-reload">
+            <span class="glyphicon glyphicon-refresh"></span>
+          </button>
+          <button type="submit" class="btn" form="data-delete">
+            <span class="glyphicon glyphicon-trash"></span>
+          </button>
+          <button type="submit" class="btn" form="data-fetch">
+            <span class="glyphicon glyphicon-ok"></span>
+          </button>
+          <button type="input" class="btn" onclick="showComment()">
+            <span class="glyphicon glyphicon-plus"></span>
+          </button>
+        </div>
       </div>
       <div id="full-comment">
-        <form action="/data" method="POST">
-          <textarea class="comment-body-form" name="comment-body"
-            onfocus="this.value='';">Your comment goes here.</textarea>
-          <div id="submit-panel">
-            <textarea class="user" name="user" onfocus="this.value=''">Username</textarea>
-            <input id="comment-submit" type="submit" value="Comment">
+        <form id="data-fetch" action="/data" method="POST">
+          <div id="add-comment">
+            <textarea class="comment-body-form" name="comment-body"
+              onfocus="this.value='';">Your comment goes here.</textarea>
+            <div id="submit-panel">
+              <textarea class="user" name="user" onfocus="this.value=''">Username</textarea>
+            </div>
           </div>
         </form>
       </div>
-      <input type="number" value="20" min="0" max="300" step="10"/>
+      <form id="data-delete" action="/deletedata" method="GET">
+      </form>
+      <form id="data-reload" action="/data" method="POST">
+        <input type="hidden" name="refresh" value="true">
+      </form>
     </div>
   </div>
   </div>
