Changes to walkthrough example, fix issue with back arrow load crashing server.

--- a/walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/src/main/webapp/index.html
+++ b/walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/src/main/webapp/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body onload="fetchBlobstoreUrlAndShowForm()">
+  <body onpageshow="fetchBlobstoreUrlAndShowForm()">
     <h1>Blobstore Fetch Example</h1>
     <p>Type a message and click submit:</p>
 
