Minor comment changes. Error handling. Small improvements.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -89,16 +89,16 @@
         <div class="input-panel">
           <input id="select-num-results" name="limit" type="number" value="20" min="0" max="300" step="1"
             form="data-reload" />
-          <button type="submit" class="btn" form="data-reload">
+          <button type="submit" class="button" form="data-reload">
             <span class="glyphicon glyphicon-refresh"></span>
           </button>
-          <button type="button" class="btn" onclick="clearComments()">
+          <button type="button" class="button" onclick="clearComments()">
             <span class="glyphicon glyphicon-trash"></span>
           </button>
-          <button type="submit" class="btn" form="data-fetch">
+          <button type="submit" class="button" form="data-fetch">
             <span class="glyphicon glyphicon-ok"></span>
           </button>
-          <button type="button" class="btn" onclick="showComment()">
+          <button type="button" class="button" onclick="showComment()">
             <span class="glyphicon glyphicon-plus"></span>
           </button>
         </div>
