Add server to handle upload requests

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div id="full-comment">
-        <form id="data-fetch" action="/data" method="POST">
+        <form id="data-fetch" action="/data" method="POST" enctype="multipart/form-data">
           <div id="add-comment">
             <textarea class="comment-body-form" name="comment-body"
               onfocus="this.value='';">Your comment goes here.</textarea>
