Setting up initial class structure, login and logout buttons.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -120,6 +120,16 @@
       <form id="data-reload" action="/data" method="POST">
         <input type="hidden" name="refresh" value="true">
       </form>
+      <form id="login-auth" action="/login" method="POST">
+        <button type="submit">
+          <span class="glyphicon glyphicon-user"></span>
+        </button>
+      </form>
+      <form id="logout-auth" action="/logout" method="POST">
+        <button type="submit">
+          <span class="glyphicon glyphicon-lock"></span>
+        </button>
+      </form>
     </div>
   </div>
   </div>
