--- a/walkthroughs/week-4-libraries/maps/examples/ufos/src/main/webapp/index.html
+++ b/walkthroughs/week-4-libraries/maps/examples/ufos/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>UFO Sightings</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2OYvM6FUTQwp6Vhx86AJF_sE-zgfEmnA"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
