Address pull request, fix missing semicolons, run autoformatter

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -131,7 +131,7 @@
         <input type="hidden" name="refresh" value="true">
       </form>
       <form id="login-auth" action="/login" method="POST"></form>
-      <form id="logout-auth" action="/logout" method="POST" form="logout-auth"></form>
+      <form id="logout-auth" action="/logout" method="POST"></form>
     </div>
   </div>
   </div>
